fix. Edge, IE, FF header menu align center

--- a/css/common.scss
+++ b/css/common.scss
@@ -111,8 +111,9 @@ header {
     border-bottom: 1px solid rgba(143, 143, 143, 0.2);
 
     .snsNav {
-      width: max-content;
       margin: 0 auto;
+      display: flex;
+      justify-content: center;
 
       .menu {
         float: left;
@@ -294,8 +295,9 @@ header {
   .headerBottom {
 
     .nav {
-      width: max-content;
       margin: 0px auto;
+      display: flex;
+      justify-content: center;
 
       .logo {
         float: left;
